Added updatePost ✍
